feat: adiciona CSS responsivo com flexbox e grid

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,84 @@
 </head>
 <body>
     <h1>Potato City News</h1>
-    <h2>Daily Updates from Underground</h2>
+    <h2>Daily Updates from Underground</h2><!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Potato City News</title>
+    <link rel="icon" type="image/x-icon" href="../images/page_icon.webp">
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <div class="header-container">
+            <a href="./index.html" class="logo">Potato City</a>
+            <nav>
+                <a href="./index.html" class="active">Home</a>
+                <a href="./information.html">Information</a>
+                <a href="./prices.html">Prices</a>
+                <a href="./contact.html">Contact</a>
+            </nav>
+        </div>
+    </header>
+
+    <main>
+        <div class="container">
+            <!-- Hero Section -->
+            <section class="hero">
+                <h1>Potato City News</h1>
+                <h2>Daily Updates from Underground</h2>
+            </section>
+
+            <!-- Breaking News Grid -->
+            <section class="news-grid">
+                <div class="card">
+                    <h3>🏛️ New Mayor Elected</h3>
+                    <img src="../images/luke.png" 
+                         alt="Mayor Luke" 
+                         width="250" 
+                         height="300"
+                         style="width: 100%; height: 200px; object-fit: cover;">
+                    <p>
+                        Mayor Luke won the election with 65% of votes. The new administration 
+                        promises better soil conditions and improved underground transportation.
+                    </p>
+                </div>
+
+                <div class="card">
+                    <h3>🎉 Harvest Festival Next Week</h3>
+                    <img src="../images/harvest_festival.png" 
+                         alt="Harvest Festival" 
+                         width="250" 
+                         height="300"
+                         style="width: 100%; height: 200px; object-fit: cover;">
+                    <p>
+                        The annual Harvest Festival will take place next Saturday at the Central Square. 
+                        Free admission for all potato families. Live music and food stands available.
+                    </p>
+                </div>
+            </section>
+
+            <!-- Quick Info Section -->
+            <section class="info-section">
+                <h2>🏙️ Explore Our City</h2>
+                <p>
+                    Discover the wonders of Potato City! From our underground museums to sprouting gardens, 
+                    there's always something exciting happening in our vibrant community.
+                </p>
+            </section>
+
+            <!-- Navigation Links -->
+            <section class="nav-links">
+                <a href="./information.html">📖 Learn more about our city</a>
+                <a href="./prices.html">💰 Check Local Prices</a>
+                <a href="./contact.html">📞 Contact City Hall</a>
+            </section>
+        </div>
+    </main>
+</body>
+</html>
     
     <nav>
     <a href="./index.html">Home</a> | 
